Porting covid app code to new name rcl-echo-cloud

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "COVID19L3NetAPP",
+    "projectName": "rcl-echo-cloud",
     "version": "3.0",
     "frontend": "javascript",
     "javascript": {
