updating names to rcl-echo-cloud

--- a/backend/lambdas/template.yaml
+++ b/backend/lambdas/template.yaml
@@ -38,27 +38,27 @@ Resources:
         - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
         - SQSSendMessagePolicy:
             QueueName: 
-              !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/sqsname:1}}'
+              !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/sqsname:1}}'
         - S3CrudPolicy:
             BucketName:
-              !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/s3Bucket:1}}'
+              !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/s3Bucket:1}}'
       VpcConfig: 
         SecurityGroupIds:
-          - '{{resolve:ssm:/covid19l3/securitygroup:1}}'
+          - '{{resolve:ssm:/rcl-echo-cloud/securitygroup:1}}'
         SubnetIds:
-          - '{{resolve:ssm:/covid19l3/lambdasubnet1:1}}'
-          - '{{resolve:ssm:/covid19l3/lambdasubnet2:1}}'
+          - '{{resolve:ssm:/rcl-echo-cloud/lambdasubnet1:1}}'
+          - '{{resolve:ssm:/rcl-echo-cloud/lambdasubnet2:1}}'
       FileSystemConfigs:
-        - Arn: !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/efslambdaarn:1}}' 
+        - Arn: !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/efslambdaarn:1}}' 
           LocalMountPath: /mnt/tmp
       Environment:
         Variables:
           sqsEndpoint:
-            !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/sqsvpce:1}}'
+            !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/sqsvpce:1}}'
           Bucket:
-            !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/s3Bucket:1}}'
+            !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/s3Bucket:1}}'
           queueName: 
-            !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/sqsname:1}}'
+            !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/sqsname:1}}'
 
   LambdaInvokePermission:
     Type: 'AWS::Lambda::Permission'
@@ -72,17 +72,17 @@ Resources:
          !Join
             - ''
             - - 'arn:aws:s3:::'
-              - !Sub '{{resolve:ssm:/covid19l3/${gitHubBranch}/s3Bucket:1}}'
+              - !Sub '{{resolve:ssm:/rcl-echo-cloud/${gitHubBranch}/s3Bucket:1}}'
 
   lambdaParameter:
     Type: AWS::SSM::Parameter
     Properties:
       Name: 
-        !Sub /covid19l3/${gitHubBranch}/lambdaArn
+        !Sub /rcl-echo-cloud/${gitHubBranch}/lambdaArn
       Type: String
       Value: 
         !GetAtt Validation.Arn
-      Description: !Sub LambdaArn for covid19l3 ${gitHubBranch}
+      Description: !Sub LambdaArn for rcl-echo-cloud ${gitHubBranch}
 
 Outputs:
   ValidationArn:
