--- a/cfn/cfn-imageBuilder.yaml
+++ b/cfn/cfn-imageBuilder.yaml
@@ -4,7 +4,7 @@ Description: EC2 Image Builder
 Parameters:
   gitHubRepo:
     Type: String
-    Default: https://github.com/UBC-CIC/COVID19-L3-Net-APP
+    Default: https://github.com/seanghaeli/rcl-echo-cloud
   gitHubBranch:
     Default: master
     Type: String 
@@ -69,21 +69,21 @@ Resources:
   ContainerBuildComponent:
     Type: 'AWS::ImageBuilder::Component'
     Properties:
-      Name: !Sub Covid19-Model-Builder-${AWS::StackName}
+      Name: !Sub rcl-echo-cloud-Model-Builder-${AWS::StackName}
       Platform: 'Linux'
       Version: "1.0.0"
       Description:
         !Join
           - ''
-          - - 'Covid19-Component-'
+          - - 'rcl-echo-cloud-Component-'
             - !Ref gitHubBranch
       ChangeDescription: 'change-description'
       # Require one of 'Data' or 'Uri' for Component template
       Data: 
         !Sub 
           - |-
-            name: Covid19Model - InlineData
-            description: Covid19 Model Load
+            name: RclEchoCloudModel - InlineData
+            description: RclEchoCloud Model Load
             schemaVersion: 1.0
 
             phases:                       
@@ -99,18 +99,18 @@ Resources:
                           yum -y install https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
                           alias cp="cp -f"
                           cd /root 
-                          git clone ${gitHub} covid-19-app --branch ${gitBranch}
-                          cp /root/covid-19-app/backend/sqs-ec2/amazon-cloudwatch-agent.json /opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json
-                          cp /root/covid-19-app/backend/sqs-ec2/seelog.xml /etc/amazon/ssm/seelog.xml                          
+                          git clone ${gitHub} rcl-echo-cloud --branch ${gitBranch}
+                          cp /root/rcl-echo-cloud/backend/sqs-ec2/amazon-cloudwatch-agent.json /opt/aws/amazon-cloudwatch-agent/etc/amazon-cloudwatch-agent.json
+                          cp /root/rcl-echo-cloud/backend/sqs-ec2/seelog.xml /etc/amazon/ssm/seelog.xml                          
 
                   - name: dockerpull
                     action: ExecuteBash
                     inputs:
                       commands:          
-                        - docker pull public.ecr.aws/k1w5m7b3/covid-19-api:v1
-                        - docker tag  public.ecr.aws/k1w5m7b3/covid-19-api:v1 covid-19-api:v1
-                        - docker pull public.ecr.aws/k1w5m7b3/covid-19-api:v2
-                        - docker tag  public.ecr.aws/k1w5m7b3/covid-19-api:v2 covid-19-api:v2
+                        - docker pull 114170599997.dkr.ecr.ca-central-1.amazonaws.com/covid-19-api:tag
+                        - docker tag  114170599997.dkr.ecr.ca-central-1.amazonaws.com/covid-19-api:tag covid-19-api:tag
+                        - docker pull 114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:tag
+                        - docker tag  114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:tag view-classifier:tag
           - gitHub: !Ref gitHubRepo
             gitBranch: !Ref gitHubBranch
             awsRegion: !Sub '{AWS:Region}'
@@ -118,11 +118,11 @@ Resources:
   ImageRecipe:
     Type: 'AWS::ImageBuilder::ImageRecipe'
     Properties:
-      Name: !Sub Covid19-Model-Recipe-${AWS::StackName}
+      Name: !Sub rcl-echo-cloud-Model-Recipe-${AWS::StackName}
       Description:
         !Join
           - ''
-          - - 'Covid19-Recipe-'
+          - - 'rcl-echo-cloud-Recipe-'
             - !Ref gitHubBranch
       Version: '1.0.0'
       ParentImage: !Ref amazonLinuxAmi
@@ -132,11 +132,11 @@ Resources:
   InfrastructureConfiguration:
     Type: AWS::ImageBuilder::InfrastructureConfiguration
     Properties:
-      Name: !Sub Covid19-Model-Infrastructure-${AWS::StackName}
+      Name: !Sub rcl-echo-cloud-Model-Infrastructure-${AWS::StackName}
       Description:
         !Join
           - ''
-          - - 'Covid19-Infrastructure-'
+          - - 'rcl-echo-cloud-Infrastructure-'
             - !Ref gitHubBranch
       InstanceProfileName:
         Ref: ImageBuilderInstanceProfile
@@ -157,11 +157,11 @@ Resources:
       TerminateInstanceOnFailure: false
       # If you do not have a default VPC or want to use a different VPC, you must specify the IDs of a subnet and one or more
       # security groups to be associated with the build instance.
-      SubnetId: '{{resolve:ssm:/covid19l3/subnet1:1}}' 
+      SubnetId: '{{resolve:ssm:/rcl-echo-cloud/subnet1:1}}' 
       SecurityGroupIds: 
-        - '{{resolve:ssm:/covid19l3/securitygroup:1}}'
+        - '{{resolve:ssm:/rcl-echo-cloud/securitygroup:1}}'
 
-  covid19l3Image:
+  rclEchoCloudImage:
     Type: AWS::ImageBuilder::Image
     Properties:
       ImageRecipeArn:
@@ -169,14 +169,14 @@ Resources:
       InfrastructureConfigurationArn:
         Ref: InfrastructureConfiguration
 
-  covid19l3ImagePipeline:
+  rclEchoCloudImagePipeline:
     Type: 'AWS::ImageBuilder::ImagePipeline'
     Properties:
-      Name: !Sub Covid19-ImagePipeline-${AWS::StackName}
+      Name: !Sub rcl-echo-cloud-ImagePipeline-${AWS::StackName}
       Description:
         !Join
           - ''
-          - - 'Covid19-ImagePipeline-'
+          - - 'rcl-echo-cloud-ImagePipeline-'
             - !Ref gitHubBranch
       ImageRecipeArn: !Ref ImageRecipe
       InfrastructureConfigurationArn: !Ref InfrastructureConfiguration
@@ -187,8 +187,8 @@ Resources:
   ImageParameter:
     Type: AWS::SSM::Parameter
     Properties:
-      Description: Image Id for Covid19l3
-      Name: !Sub /covid19l3/${gitHubBranch}/imageid
+      Description: Image Id for rclEchoCloud
+      Name: !Sub /rcl-echo-cloud/${gitHubBranch}/imageid
       Type: String
       Value:
-        Fn::GetAtt: [covid19l3Image, ImageId]
+        Fn::GetAtt: [rclEchoCloudImage, ImageId]
