Modified docker image tag

--- a/cfn/cfn-imageBuilder.yaml
+++ b/cfn/cfn-imageBuilder.yaml
@@ -112,8 +112,8 @@ Resources:
                     action: ExecuteBash
                     inputs:
                       commands:          
-                        - docker pull 114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:tag
-                        - docker tag  114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:tag view-classifier:tag
+                        - docker pull 114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:latest
+                        - docker tag  114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:latest view-classifier:latest
           - gitHub: !Ref gitHubRepo
             gitBranch: !Ref gitHubBranch
             awsRegion: !Sub '{AWS:Region}'
