Provided ecr:GetAuthorizationToken policy to ImageBuilderInstanceRole to access authentication token

--- a/cfn/cfn-imageBuilder.yaml
+++ b/cfn/cfn-imageBuilder.yaml
@@ -27,6 +27,15 @@ Resources:
         - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
         - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/EC2InstanceProfileForImageBuilder
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+      Policies:
+        - PolicyName: ECRGetAuthorizationTokenPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action: 
+                  - ecr:GetAuthorizationToken
+                Resource: "*"
       AssumeRolePolicyDocument:
         Statement:
           - Action:
