Fixed bash variable substitution syntax

--- a/cfn/cfn-imageBuilder.yaml
+++ b/cfn/cfn-imageBuilder.yaml
@@ -127,7 +127,7 @@ Resources:
                         - docker tag  114170599997.dkr.ecr.ca-central-1.amazonaws.com/view-classifier:latest view-classifier:latest
           - gitHub: !Ref gitHubRepo
             gitBranch: !Ref gitHubBranch
-            awsRegion: !Sub '{AWS:Region}'
+            awsRegion: !Sub '{AWS::Region}'
 
   ImageRecipe:
     Type: 'AWS::ImageBuilder::ImageRecipe'
