--- a/backend/lambdas/template.yaml
+++ b/backend/lambdas/template.yaml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
-    "Dicom Lambda Validation \n"
+    "Sets up a continuous process that monitors an SQS queue and performs inference on view-classifier model on any .mat data loaded to S3 bucket, and uploads output to the same bucket. \n"
 
 Parameters:
   gitHubBranch:
@@ -28,10 +28,10 @@ Resources:
           - python3.7
         RetentionPolicy: Delete
 
-  Validation:
+  Model:
     Type: AWS::Serverless::Function 
     Properties:
-      CodeUri: ./validation/
+      CodeUri: ./model/
       Layers:
       - !Ref PyDicomLayer
       Policies:
@@ -64,7 +64,7 @@ Resources:
     Type: 'AWS::Lambda::Permission'
     Properties:
       FunctionName: 
-        !GetAtt Validation.Arn
+        !GetAtt Model.Arn
       Action: 'lambda:InvokeFunction'
       Principal: s3.amazonaws.com
       SourceAccount: !Ref 'AWS::AccountId'
@@ -81,9 +81,9 @@ Resources:
         !Sub /rcl-echo-cloud/${gitHubBranch}/lambdaArn
       Type: String
       Value: 
-        !GetAtt Validation.Arn
+        !GetAtt Model.Arn
       Description: !Sub LambdaArn for rcl-echo-cloud ${gitHubBranch}
 
 Outputs:
-  ValidationArn:
-      Value: !GetAtt Validation.Arn
+  ModelArn:
+      Value: !GetAtt Model.Arn
